--- a/package.json
+++ b/package.json
@@ -14,38 +14,46 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@analogjs/content": "^0.2.0-beta.7",
-    "@analogjs/router": "^0.2.0-beta.7",
-    "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/platform-server": "^16.0.0",
-    "@angular/router": "^16.0.0",
-    "@nx/angular": "^16.0.0",
+    "@analogjs/content": "0.2.0-beta.7",
+    "@analogjs/router": "0.2.0-beta.7",
+    "@angular/animations": "^16.0.1",
+    "@angular/common": "^16.0.1",
+    "@angular/compiler": "^16.0.1",
+    "@angular/core": "^16.0.1",
+    "@angular/forms": "^16.0.1",
+    "@angular/platform-browser": "^16.0.1",
+    "@angular/platform-browser-dynamic": "^16.0.1",
+    "@angular/platform-server": "^16.0.1",
+    "@angular/router": "^16.0.1",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@nx/angular": "^16.1.4",
+    "fluent-ffmpeg": "^2.1.2",
     "front-matter": "^4.0.2",
-    "marked": "^4.2.12",
+    "marked": "^4.3.0",
+    "ngx-markdown": "^16.0.0",
+    "openai": "^3.2.1",
     "prismjs": "^1.29.0",
-    "rxjs": "~7.5.6",
-    "tslib": "^2.4.0",
+    "rxjs": "~7.5.7",
+    "tslib": "^2.5.0",
+    "youtube-mp3-downloader": "^0.7.11",
+    "ytdl-core": "^4.11.4",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@analogjs/platform": "^0.2.0-beta.7",
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@nx/vite": "^16.0.0",
-    "nx": "^16.0.0",
-    "jsdom": "^20.0.0",
-    "typescript": "~5.0.2",
-    "vite": "^4.0.3",
-    "vitest": "^0.31.0",
-    "tailwindcss": "^3.3.1",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.14"
+    "@analogjs/platform": "0.2.0-beta.7",
+    "@angular-devkit/build-angular": "^16.0.1",
+    "@angular/cli": "^16.0.1",
+    "@angular/compiler-cli": "^16.0.1",
+    "@nx/vite": "^16.1.4",
+    "@types/fluent-ffmpeg": "^2.1.21",
+    "@types/marked": "^4.3.0",
+    "autoprefixer": "^10.4.14",
+    "jsdom": "^20.0.3",
+    "nx": "^16.1.4",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
+    "typescript": "~5.0.4",
+    "vite": "^4.3.5",
+    "vitest": "^0.31.0"
   }
 }
