--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ yarn-error.log
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
+storage/*
+!storage/.gitkeep
 
 # Miscellaneous
 /.angular/cache
